# a.core

./: Common.hs  EmbedFile.hs  Examples.hs  Instruction.hs  Main.hs  a.cabal  make  stack.yaml
Util/: Vec.hs
examples/: counter  counter.s
src/: Alu.hs  Branch.hs  Common.hs  EmbedFile.hs  Instruction.hs  MCode.hs  Main.hs  Prelude.hs  Priv.hs  Proc.hs  Trap.hs
src/Alu/: Flags.hs  Impl.hs  Ops.hs
src/MCode/: Lens.hs
src/Util/: BitSet.hs  BlockRam.hs  Ram.hs  Vec.hs
